--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "program": "${workspaceFolder}/out/build/${command:cmake.activeConfigurePresetName}/CVRP",
             "args": [
-                "instances/A/A-n32-k5.vrp"
+                "instances/E/E-n13-k4.vrp"
             ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
