--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,5 +15,6 @@ FetchContent_MakeAvailable(argparse)
 add_executable(CVRP src/main.cpp
     src/Instance.h src/Instance.cpp
     src/Pricing.h src/Pricing.cpp
+    src/MasterModel.h src/MasterModel.cpp
 )
 target_link_libraries(CVRP ilocplex concert cplex m pthread argparse)
