--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,9 @@ FetchContent_MakeAvailable(argparse)
 
 add_executable(CVRP src/main.cpp
     src/Instance.h src/Instance.cpp
+    src/Labels.h src/Labels.cpp
     src/Pricing.h src/Pricing.cpp
     src/MasterModel.h src/MasterModel.cpp
+    src/BranchAndPrice.h src/BranchAndPrice.cpp
 )
 target_link_libraries(CVRP ilocplex concert cplex m pthread argparse)
