--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,11 +18,23 @@
             "externalConsole": false,
             "preLaunchTask": "CMake: build",
             "linux": {
-                "MIMode": "gdb"
+                "MIMode": "gdb",
+                "setupCommands": [
+                    {
+                        "description": "Enable pretty-printing for gdb",
+                        "text": "python import sys; sys.path.append('/usr/share/gcc/python');sys.path.insert(0, '/usr/bin/python');from libstdcxx.v6.printers import register_libstdcxx_printers;register_libstdcxx_printers(None)",
+                        "ignoreFailures": false
+                    },
+                    {
+                        "description": "Enable pretty-printing for gdb",
+                        "text": "-enable-pretty-printing",
+                        "ignoreFailures": true
+                    }
+                ],
             },
             "osx": {
                 "MIMode": "lldb"
-            }
+            },
         },
     ]
 }
