add cvrpsep library

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,11 +2,15 @@
     "cSpell.words": [
         "argparse",
         "BPNODE",
+        "CAPSEP",
+        "CMGR",
+        "Cnstr",
         "Coef",
         "Coefs",
         "cplex",
         "CPLEX",
         "CVRP",
+        "cvrpsep",
         "DLOG",
         "ilocplex",
         "ILOG",
