--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,9 +14,13 @@ FetchContent_MakeAvailable(argparse)
 
 add_executable(CVRP src/main.cpp
     src/Instance.h src/Instance.cpp
-    src/Labels.h src/Labels.cpp
     src/Pricing.h src/Pricing.cpp
+    src/Labels.h src/Labels.cpp
     src/MasterModel.h src/MasterModel.cpp
     src/BranchAndPrice.h src/BranchAndPrice.cpp
 )
-target_link_libraries(CVRP ilocplex concert cplex m pthread argparse)
+
+add_subdirectory(cvrpsep)
+target_include_directories(CVRP PRIVATE cvrpsep)
+
+target_link_libraries(CVRP ilocplex concert cplex m pthread argparse cvrpsep)
