--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ add_executable(CVRP src/main.cpp
     src/Pricing.h src/Pricing.cpp
     src/Labels.h src/Labels.cpp
     src/MasterModel.h src/MasterModel.cpp
+    src/Node.h src/Node.cpp
     src/BranchAndPrice.h src/BranchAndPrice.cpp
     src/CutsSeparator.h src/CutsSeparator.cpp
 )
